--- a/dt2w/res/values/strings.xml
+++ b/dt2w/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">DT2W Service for x6827</string>
+    <string name="app_name">DT2W Service for X695C</string>
 </resources>
